// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":r0:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":rc:"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="true"
      data-disabled="false"
    >
      <input
        aria-checked="true"
        checked=""
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":r2:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="true"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        disabled=""
        id=":r4:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.css-1df1xfu-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":r6:"
        name="test"
        type="checkbox"
      />
    </div>
    test
    <sup>
      <svg
        class="css-1df1xfu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-1df1xfu-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #a6102d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    test
    <sup>
      <svg
        class="css-1df1xfu-StyledIcon-sizeStyles etwatq50"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":r8:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":ri:"
        name="test"
        type="checkbox"
      />
    </div>
    <span>
      Custom label rendered
    </span>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":rg:"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .css-uo0qp6-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-uo0qp6-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 22.04px;
}

.css-uo0qp6-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-a78dvj-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 48px;
  height: 24px;
}

.css-a78dvj-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-a78dvj-StyledToggle:focus-within,
.css-a78dvj-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.css-a78dvj-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-a78dvj-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-a78dvj-StyledToggle[data-checked='true']:focus-within,
.css-a78dvj-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-a78dvj-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-a78dvj-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-uo0qp6-StyledLabel e6hn8de0"
  >
    This is a label
    <div
      class="css-a78dvj-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":re:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .css-9kpil1-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.css-9kpil1-StyledLabel:active .e6hn8de2[data-disabled='false']:after {
  width: 16.53px;
}

.css-9kpil1-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.css-89cup7-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #b2b6c3;
  width: 40px;
  height: 20px;
}

.css-89cup7-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.css-89cup7-StyledToggle:focus-within,
.css-89cup7-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-89cup7-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.css-89cup7-StyledToggle[data-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.css-89cup7-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.css-89cup7-StyledToggle[data-checked='true']:focus-within,
.css-89cup7-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.css-89cup7-StyledToggle[data-disabled='true'] {
  background: #d4dae7;
}

.css-89cup7-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #bda5df;
}

.css-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.css-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="css-9kpil1-StyledLabel e6hn8de0"
  >
    <div
      class="css-89cup7-StyledToggle e6hn8de2"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="css-1myp2ct-StyledCheckbox e6hn8de1"
        id=":ra:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;
